--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "SET NODE_ENV='development' & webpack --mode development",
     "build:prod": "SET NODE_ENV='production' & webpack --mode production",
     "organize": "(mkdir .\\dist\\js & mkdir .\\dist\\css & MOVE /Y .\\dist\\*.js .\\dist\\js & MOVE /Y .\\dist\\*.css .\\dist\\css) > nul 2>&1",
-    "start": "npm run build && webpack-dev-server --mode development",
-    "start:prod": "npm run build && webpack-dev-server --mode production",
-    "serve": "webpack-dev-server --config webpack.dev.js"
+    "serve": "webpack-dev-server --config webpack.dev.js",
+    "node": "SET NODE_ENV='development' & nodemon server.js"
   },
   "author": "",
   "license": "ISC",
