--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^3.6.4",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "file-loader": "^5.0.2",
     "mini-css-extract-plugin": "^0.9.0",
