--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "intersection-observer": "^0.7.0"
+    "dotenv": "^8.2.0",
+    "intersection-observer": "^0.7.0",
+    "mysql": "^2.18.1"
   }
 }
