Have DB store bcrypt hash. Verify login password with bcrypt. TODO https.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "intersection-observer": "^0.7.0",
